Extract JWT configuration into "bootique-shiro-jwt" #48
cleanup